--- a/config/sync/field.storage.paragraph.field_font_class.yml
+++ b/config/sync/field.storage.paragraph.field_font_class.yml
@@ -29,6 +29,9 @@ settings:
     -
       value: shield
       label: shield
+    -
+      value: light
+      label: light
   allowed_values_function: ''
 module: options
 locked: false
