--- a/config/sync/core.entity_form_display.config_pages.general_pages.default.yml
+++ b/config/sync/core.entity_form_display.config_pages.general_pages.default.yml
@@ -15,10 +15,14 @@ dependencies:
     - field.field.config_pages.general_pages.field_digital_service_link
     - field.field.config_pages.general_pages.field_digital_service_title
     - field.field.config_pages.general_pages.field_ds_descriptio
+    - field.field.config_pages.general_pages.field_laws_regulations
+    - field.field.config_pages.general_pages.field_laws_regulations_descripti
     - field.field.config_pages.general_pages.field_leadership_banner
     - field.field.config_pages.general_pages.field_multimedia_gallery_banner
     - field.field.config_pages.general_pages.field_our_mission
     - field.field.config_pages.general_pages.field_our_vision
+    - field.field.config_pages.general_pages.field_serv_header_details
+    - field.field.config_pages.general_pages.field_services_info
     - field.field.config_pages.general_pages.field_sh_images
     - image.style.thumbnail
   module:
@@ -110,6 +114,40 @@ third_party_settings:
       region: content
       parent_name: ''
       weight: 4
+      format_type: tab
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        label_as_html: false
+        formatter: closed
+        description: ''
+        required_fields: true
+    group_services_view_header:
+      children:
+        - field_services_info
+        - field_serv_header_details
+      label: 'Services View Header'
+      region: content
+      parent_name: ''
+      weight: 5
+      format_type: tab
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        label_as_html: false
+        formatter: closed
+        description: ''
+        required_fields: true
+    group_laws_regulations:
+      children:
+        - field_laws_regulations
+        - field_laws_regulations_descripti
+      label: 'Laws & Regulations'
+      region: content
+      parent_name: ''
+      weight: 6
       format_type: tab
       format_settings:
         classes: ''
@@ -212,6 +250,22 @@ content:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
+  field_laws_regulations:
+    type: string_textfield
+    weight: 7
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  field_laws_regulations_descripti:
+    type: text_textarea
+    weight: 8
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
   field_leadership_banner:
     type: image_image
     weight: 1
@@ -239,6 +293,22 @@ content:
   field_our_vision:
     type: text_textarea
     weight: 3
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+  field_serv_header_details:
+    type: text_textarea
+    weight: 9
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+  field_services_info:
+    type: text_textarea
+    weight: 8
     region: content
     settings:
       rows: 5
