--- a/config/sync/core.entity_form_display.node.digital_shajrah.default.yml
+++ b/config/sync/core.entity_form_display.node.digital_shajrah.default.yml
@@ -4,8 +4,14 @@ status: true
 dependencies:
   config:
     - field.field.node.digital_shajrah.body
+    - field.field.node.digital_shajrah.field_ds_digital_operation
+    - field.field.node.digital_shajrah.field_ds_infrastructure_descr
+    - field.field.node.digital_shajrah.field_ds_our_mission
+    - field.field.node.digital_shajrah.field_energy_saving
+    - field.field.node.digital_shajrah.field_government_entities
     - field.field.node.digital_shajrah.field_growing
     - field.field.node.digital_shajrah.field_image
+    - field.field.node.digital_shajrah.field_our_performance_in_numbers
     - field.field.node.digital_shajrah.field_page_type
     - field.field.node.digital_shajrah.field_tailored_to_meet_sharjah
     - image.style.thumbnail
@@ -36,6 +42,48 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_ds_digital_operation:
+    type: text_textarea
+    weight: 17
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+  field_ds_infrastructure_descr:
+    type: text_textarea
+    weight: 16
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+  field_ds_our_mission:
+    type: text_textarea
+    weight: 18
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+  field_energy_saving:
+    type: string_textfield
+    weight: 15
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  field_government_entities:
+    type: text_textarea_with_summary
+    weight: 14
+    region: content
+    settings:
+      rows: 9
+      summary_rows: 3
+      placeholder: ''
+      show_summary: false
+    third_party_settings: {  }
   field_growing:
     type: paragraphs
     weight: 12
@@ -61,6 +109,24 @@ content:
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
+    third_party_settings: {  }
+  field_our_performance_in_numbers:
+    type: paragraphs
+    weight: 26
+    region: content
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      closed_mode: summary
+      autocollapse: none
+      closed_mode_threshold: 0
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+      features:
+        collapse_edit_all: collapse_edit_all
+        duplicate: duplicate
     third_party_settings: {  }
   field_page_type:
     type: options_select
