--- a/config/sync/core.entity_view_display.config_pages.general_pages.default.yml
+++ b/config/sync/core.entity_view_display.config_pages.general_pages.default.yml
@@ -15,10 +15,14 @@ dependencies:
     - field.field.config_pages.general_pages.field_digital_service_link
     - field.field.config_pages.general_pages.field_digital_service_title
     - field.field.config_pages.general_pages.field_ds_descriptio
+    - field.field.config_pages.general_pages.field_laws_regulations
+    - field.field.config_pages.general_pages.field_laws_regulations_descripti
     - field.field.config_pages.general_pages.field_leadership_banner
     - field.field.config_pages.general_pages.field_multimedia_gallery_banner
     - field.field.config_pages.general_pages.field_our_mission
     - field.field.config_pages.general_pages.field_our_vision
+    - field.field.config_pages.general_pages.field_serv_header_details
+    - field.field.config_pages.general_pages.field_services_info
     - field.field.config_pages.general_pages.field_sh_images
   module:
     - link
@@ -133,6 +137,21 @@ content:
     third_party_settings: {  }
     weight: 14
     region: content
+  field_laws_regulations:
+    type: string
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    weight: 20
+    region: content
+  field_laws_regulations_descripti:
+    type: text_default
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 21
+    region: content
   field_leadership_banner:
     type: image
     label: above
@@ -176,6 +195,20 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: 2
+    region: content
+  field_serv_header_details:
+    type: text_default
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 18
+    region: content
+  field_services_info:
+    type: text_default
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 19
     region: content
   field_sh_images:
     type: image
