--- a/config/sync/core.entity_view_display.node.our_strategy.default.yml
+++ b/config/sync/core.entity_view_display.node.our_strategy.default.yml
@@ -53,7 +53,7 @@ content:
     region: content
   field_early_brief:
     type: text_default
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     weight: 102
@@ -75,7 +75,7 @@ content:
     region: content
   field_our_strategic_goals:
     type: entity_reference_revisions_entity_view
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
