--- a/config/sync/views.view.news.yml
+++ b/config/sync/views.view.news.yml
@@ -9,6 +9,7 @@ dependencies:
   module:
     - better_exposed_filters
     - node
+    - search
     - user
     - vch
 id: news
@@ -110,8 +111,8 @@ display:
           plugin_id: date
           order: DESC
           expose:
-            label: ''
-            field_identifier: ''
+            label: 'Authored on'
+            field_identifier: created
           exposed: false
           granularity: second
       arguments: {  }
@@ -172,6 +173,25 @@ display:
     display_plugin: block
     position: 1
     display_options:
+      sorts:
+        created:
+          id: created
+          table: node_field_data
+          field: created
+          relationship: none
+          group_type: group
+          admin_label: ''
+          entity_type: node
+          entity_field: created
+          plugin_id: date
+          order: DESC
+          expose:
+            label: 'Authored on'
+            field_identifier: created
+          exposed: false
+          granularity: second
+      defaults:
+        sorts: false
       display_description: ''
       display_extenders: {  }
       block_description: 'Latest News Front'
@@ -195,7 +215,7 @@ display:
         options:
           offset: 0
           pagination_heading_level: h4
-          items_per_page: 3
+          items_per_page: 25
           total_pages: null
           id: 0
           tags:
@@ -206,7 +226,7 @@ display:
           expose:
             items_per_page: true
             items_per_page_label: 'Items per page'
-            items_per_page_options: '3, 4, 6, 8'
+            items_per_page_options: '25, 50,75, 100'
             items_per_page_options_all: true
             items_per_page_options_all_label: '- All -'
             offset: true
@@ -216,17 +236,17 @@ display:
         type: bef
         options:
           submit_button: Apply
-          reset_button: true
+          reset_button: false
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
           expose_sort_order: true
-          sort_asc_label: Asc
-          sort_desc_label: Desc
+          sort_asc_label: 'Oldest  to Latest'
+          sort_desc_label: 'Latest to oldest'
           text_input_required: 'Select any filter and click on Apply to see results'
           text_input_required_format: full_html
           bef:
             general:
-              autosubmit: false
+              autosubmit: true
               autosubmit_exclude_textfield: false
               autosubmit_textfield_delay: 500
               autosubmit_textfield_minimum_length: 3
@@ -236,7 +256,32 @@ display:
               secondary_label: 'Advanced options'
               secondary_open: false
               reset_button_always_show: false
+            sort:
+              plugin_id: default
+              advanced:
+                combine: false
+                combine_rewrite: ''
+                reset: false
+                reset_label: ''
+                collapsible: false
+                collapsible_label: 'Sort options'
+                is_secondary: false
+            pager:
+              plugin_id: default
+              advanced:
+                is_secondary: false
             filter:
+              keys:
+                plugin_id: default
+                advanced:
+                  placeholder_text: Search
+                  rewrite:
+                    filter_rewrite_values: ''
+                    filter_rewrite_values_key: false
+                  collapsible: false
+                  collapsible_disable_automatic_open: false
+                  is_secondary: false
+                  hide_label: false
               field_year_value:
                 plugin_id: default
                 advanced:
@@ -245,14 +290,23 @@ display:
                   collapsible_disable_automatic_open: false
                   is_secondary: false
                   hide_label: false
-              created:
-                plugin_id: bef_datepicker
-                advanced:
-                  placeholder_text: ''
-                  collapsible: false
-                  collapsible_disable_automatic_open: false
-                  is_secondary: false
-                  hide_label: false
+      sorts:
+        created:
+          id: created
+          table: node_field_data
+          field: created
+          relationship: none
+          group_type: group
+          admin_label: ''
+          entity_type: node
+          entity_field: created
+          plugin_id: date
+          order: DESC
+          expose:
+            label: 'Authored on'
+            field_identifier: created
+          exposed: true
+          granularity: second
       filters:
         status:
           id: status
@@ -274,6 +328,48 @@ display:
           plugin_id: bundle
           value:
             news: news
+          group: 1
+        keys:
+          id: keys
+          table: node_search_index
+          field: keys
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: search_keywords
+          operator: optional
+          value: ''
+          group: 1
+          exposed: true
+          expose:
+            operator_id: keys_op
+            label: ''
+            description: ''
+            use_operator: false
+            operator: keys_op
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: keys
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              content_editor: '0'
+              administrator: '0'
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
         field_year_value:
           id: field_year_value
           table: node__field_year
@@ -291,13 +387,13 @@ display:
           exposed: true
           expose:
             operator_id: field_year_value_op
-            label: 'Year (field_year)'
+            label: ''
             description: ''
             use_operator: false
             operator: field_year_value_op
             operator_limit_selection: false
             operator_list: {  }
-            identifier: field_year_value
+            identifier: year
             required: false
             remember: false
             multiple: false
@@ -338,12 +434,15 @@ display:
           view_mode: grid
       defaults:
         title: false
+        use_ajax: false
         pager: false
         exposed_form: false
         style: false
         row: false
+        sorts: false
         filters: false
         filter_groups: false
+      use_ajax: false
       display_description: ''
       display_extenders: {  }
       path: media-center/news
@@ -354,6 +453,8 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
+        - 'url.query_args:sort_by'
+        - 'url.query_args:sort_order'
         - 'user.node_grants:view'
         - user.permissions
       tags: {  }
