--- a/config/sync/views.view.search.yml
+++ b/config/sync/views.view.search.yml
@@ -125,12 +125,16 @@ display:
               autosubmit_exclude_textfield: false
               autosubmit_textfield_delay: 500
               autosubmit_textfield_minimum_length: 3
-              autosubmit_hide: true
+              autosubmit_hide: false
               input_required: true
               allow_secondary: false
               secondary_label: 'Advanced options'
               secondary_open: false
               reset_button_always_show: false
+            pager:
+              plugin_id: default
+              advanced:
+                is_secondary: false
             filter:
               keys:
                 plugin_id: default
