--- a/config/sync/views.view.services.yml
+++ b/config/sync/views.view.services.yml
@@ -1208,6 +1208,7 @@ display:
     display_plugin: block
     position: 1
     display_options:
+      empty: {  }
       arguments: {  }
       filters:
         status:
@@ -1365,6 +1366,7 @@ display:
         groups:
           1: AND
       defaults:
+        empty: false
         arguments: false
         filters: false
         filter_groups: false
@@ -1387,6 +1389,7 @@ display:
     position: 1
     display_options:
       title: Services
+      empty: {  }
       arguments:
         field_services_type_target_id:
           id: field_services_type_target_id
@@ -1578,6 +1581,7 @@ display:
         groups:
           1: AND
       defaults:
+        empty: false
         title: false
         use_ajax: false
         arguments: false
