--- a/config/sync/core.entity_form_display.config_pages.general_pages.default.yml
+++ b/config/sync/core.entity_form_display.config_pages.general_pages.default.yml
@@ -15,6 +15,7 @@ dependencies:
     - field.field.config_pages.general_pages.field_digital_service_link
     - field.field.config_pages.general_pages.field_digital_service_title
     - field.field.config_pages.general_pages.field_ds_descriptio
+    - field.field.config_pages.general_pages.field_initiative_banner
     - field.field.config_pages.general_pages.field_laws_regulations
     - field.field.config_pages.general_pages.field_laws_regulations_descripti
     - field.field.config_pages.general_pages.field_leadership_banner
@@ -23,6 +24,7 @@ dependencies:
     - field.field.config_pages.general_pages.field_our_mission
     - field.field.config_pages.general_pages.field_our_vision
     - field.field.config_pages.general_pages.field_serv_header_details
+    - field.field.config_pages.general_pages.field_service_header_banner
     - field.field.config_pages.general_pages.field_services_apply_link
     - field.field.config_pages.general_pages.field_services_info
     - field.field.config_pages.general_pages.field_sh_images
@@ -37,13 +39,13 @@ third_party_settings:
     group_about:
       children:
         - field_about_title
-        - field_sh_images
-        - field_our_vision
         - field_our_mission
+        - field_our_vision
+        - field_sh_images
       label: About
       region: hidden
       parent_name: ''
-      weight: 8
+      weight: 11
       format_type: tab
       format_settings:
         classes: ''
@@ -127,6 +129,7 @@ third_party_settings:
         required_fields: true
     group_services_view_header:
       children:
+        - field_service_header_banner
         - field_services_info
         - field_serv_header_details
       label: 'Services View Header'
@@ -182,6 +185,22 @@ third_party_settings:
       region: content
       parent_name: ''
       weight: 7
+      format_type: tab
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        label_as_html: false
+        formatter: closed
+        description: ''
+        required_fields: true
+    group_initiative:
+      children:
+        - field_initiative_banner
+      label: Initiative
+      region: content
+      parent_name: ''
+      weight: 8
       format_type: tab
       format_settings:
         classes: ''
@@ -276,6 +295,14 @@ content:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
+  field_initiative_banner:
+    type: image_image
+    weight: 9
+    region: content
+    settings:
+      progress_indicator: throbber
+      preview_image_style: thumbnail
+    third_party_settings: {  }
   field_laws_regulations:
     type: string_textfield
     weight: 7
@@ -318,11 +345,19 @@ content:
     third_party_settings: {  }
   field_serv_header_details:
     type: text_textarea
-    weight: 9
+    weight: 16
     region: content
     settings:
       rows: 5
       placeholder: ''
+    third_party_settings: {  }
+  field_service_header_banner:
+    type: image_image
+    weight: 14
+    region: content
+    settings:
+      progress_indicator: throbber
+      preview_image_style: thumbnail
     third_party_settings: {  }
   field_services_apply_link:
     type: link_default
@@ -334,7 +369,7 @@ content:
     third_party_settings: {  }
   field_services_info:
     type: text_textarea
-    weight: 8
+    weight: 15
     region: content
     settings:
       rows: 5
