--- a/config/sync/core.entity_view_display.config_pages.general_pages.default.yml
+++ b/config/sync/core.entity_view_display.config_pages.general_pages.default.yml
@@ -15,6 +15,7 @@ dependencies:
     - field.field.config_pages.general_pages.field_digital_service_link
     - field.field.config_pages.general_pages.field_digital_service_title
     - field.field.config_pages.general_pages.field_ds_descriptio
+    - field.field.config_pages.general_pages.field_initiative_banner
     - field.field.config_pages.general_pages.field_laws_regulations
     - field.field.config_pages.general_pages.field_laws_regulations_descripti
     - field.field.config_pages.general_pages.field_leadership_banner
@@ -23,6 +24,7 @@ dependencies:
     - field.field.config_pages.general_pages.field_our_mission
     - field.field.config_pages.general_pages.field_our_vision
     - field.field.config_pages.general_pages.field_serv_header_details
+    - field.field.config_pages.general_pages.field_service_header_banner
     - field.field.config_pages.general_pages.field_services_apply_link
     - field.field.config_pages.general_pages.field_services_info
     - field.field.config_pages.general_pages.field_sh_images
@@ -139,6 +141,21 @@ content:
     third_party_settings: {  }
     weight: 14
     region: content
+  field_initiative_banner:
+    type: image
+    label: above
+    settings:
+      image_link: ''
+      image_style: ''
+      image_loading:
+        attribute: lazy
+      svg_attributes:
+        width: null
+        height: null
+      svg_render_as_image: true
+    third_party_settings: {  }
+    weight: 25
+    region: content
   field_laws_regulations:
     type: string
     label: above
@@ -219,6 +236,21 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: 18
+    region: content
+  field_service_header_banner:
+    type: image
+    label: above
+    settings:
+      image_link: ''
+      image_style: ''
+      image_loading:
+        attribute: lazy
+      svg_attributes:
+        width: null
+        height: null
+      svg_render_as_image: true
+    third_party_settings: {  }
+    weight: 24
     region: content
   field_services_apply_link:
     type: link
