--- a/config/sync/core.entity_view_display.node.our_strategy.default.yml
+++ b/config/sync/core.entity_view_display.node.our_strategy.default.yml
@@ -46,7 +46,7 @@ content:
     region: content
   field_dig_transfermation:
     type: text_default
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     weight: 103
