--- a/config/sync/field.field.node.initiatives.field_weight.yml
+++ b/config/sync/field.field.node.initiatives.field_weight.yml
@@ -1,18 +1,18 @@
-uuid: ad34f733-7602-4f32-9848-9b25f6f89309
+uuid: 101dd6c1-828e-4da7-a594-9a278c4e6b9f
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.node.field_weight
-    - node.type.services
-id: node.services.field_weight
+    - node.type.initiatives
+id: node.initiatives.field_weight
 field_name: field_weight
 entity_type: node
-bundle: services
-label: 'Front Weight'
+bundle: initiatives
+label: Weight
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
