--- a/config/sync/core.entity_view_display.node.services.default.yml
+++ b/config/sync/core.entity_view_display.node.services.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.services.body
     - field.field.node.services.field_font_icon
+    - field.field.node.services.field_general_weight
     - field.field.node.services.field_image
     - field.field.node.services.field_kpi_stat_card
     - field.field.node.services.field_service_detail_item
@@ -40,6 +41,15 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: 106
+    region: content
+  field_general_weight:
+    type: number_integer
+    label: above
+    settings:
+      thousand_separator: ''
+      prefix_suffix: true
+    third_party_settings: {  }
+    weight: 111
     region: content
   field_image:
     type: image
