--- a/config/sync/field.field.node.services.field_general_weight.yml
+++ b/config/sync/field.field.node.services.field_general_weight.yml
@@ -1,18 +1,18 @@
-uuid: ad34f733-7602-4f32-9848-9b25f6f89309
+uuid: 9d79166a-f127-40dd-afc9-2fcaca4a9289
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_weight
+    - field.storage.node.field_general_weight
     - node.type.services
-id: node.services.field_weight
-field_name: field_weight
+id: node.services.field_general_weight
+field_name: field_general_weight
 entity_type: node
 bundle: services
-label: 'Front Weight'
+label: 'General weight'
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
