--- a/config/sync/views.view.services.yml
+++ b/config/sync/views.view.services.yml
@@ -622,8 +622,26 @@ display:
     position: 1
     display_options:
       title: 'Digital Operations'
+      pager:
+        type: some
+        options:
+          offset: 0
+          items_per_page: 9
       empty: {  }
-      sorts: {  }
+      sorts:
+        field_general_weight_value:
+          id: field_general_weight_value
+          table: node__field_general_weight
+          field: field_general_weight_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: standard
+          order: ASC
+          expose:
+            label: ''
+            field_identifier: ''
+          exposed: false
       arguments:
         field_services_type_target_id:
           id: field_services_type_target_id
@@ -681,46 +699,6 @@ display:
           value:
             services: services
           group: 1
-        promote:
-          id: promote
-          table: node_field_data
-          field: promote
-          relationship: none
-          group_type: group
-          admin_label: ''
-          entity_type: node
-          entity_field: promote
-          plugin_id: boolean
-          operator: '='
-          value: '1'
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            operator_limit_selection: false
-            operator_list: {  }
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
         keys:
           id: keys
           table: node_search_index
@@ -819,6 +797,7 @@ display:
         title: false
         css_class: false
         use_ajax: false
+        pager: false
         sorts: false
         arguments: false
         filters: false
@@ -859,12 +838,17 @@ display:
     position: 1
     display_options:
       title: Services
+      pager:
+        type: some
+        options:
+          offset: 0
+          items_per_page: 9
       empty: {  }
       sorts:
-        field_weight_value:
-          id: field_weight_value
-          table: node__field_weight
-          field: field_weight_value
+        field_general_weight_value:
+          id: field_general_weight_value
+          table: node__field_general_weight
+          field: field_general_weight_value
           relationship: none
           group_type: group
           admin_label: ''
@@ -931,46 +915,6 @@ display:
           value:
             services: services
           group: 1
-        promote:
-          id: promote
-          table: node_field_data
-          field: promote
-          relationship: none
-          group_type: group
-          admin_label: ''
-          entity_type: node
-          entity_field: promote
-          plugin_id: boolean
-          operator: '='
-          value: '1'
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            operator_limit_selection: false
-            operator_list: {  }
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
         keys:
           id: keys
           table: node_search_index
@@ -1069,6 +1013,7 @@ display:
         title: false
         css_class: false
         use_ajax: false
+        pager: false
         sorts: false
         arguments: false
         filters: false
